Swagger docs refreshed
